fixed broker ref and wrong overflow on chat message input

--- a/knative/chat-client/pkg/frontend/src/components/dashboard/chat/Chat.css
+++ b/knative/chat-client/pkg/frontend/src/components/dashboard/chat/Chat.css
@@ -31,6 +31,10 @@
   overflow-y: auto;
 }
 
+.bubbles-bg.no-overflow {
+  overflow: hidden;
+}
+
 .contact-message, .user-message {
   height: fit-content;
   width: fit-content;
